# backlog

./: BACKLOG.md  README.de.md  README.md  SKILL.md  app.tcss  backlog.py  ideas.json  pyproject.toml  run.bat  run.sh  setup-dev-environment.bat
src/backlog/: __init__.py  __main__.py  app.py  cli.py  i18n.py  storage.py
src/backlog/locale/: de.json  en.json
tests/: test_storage.py
